--- a/index.html
+++ b/index.html
@@ -1,259 +1,276 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Miranda Flow | Boutique</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Miranda Flow Boutique</title>
 
-  <!-- GOOGLE FONT -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap" rel="stylesheet">
 
-  <style>
-    *{
-      margin:0;
-      padding:0;
-      box-sizing:border-box;
-    }
+<style>
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:'Montserrat',sans-serif;
+}
 
-    body{
-      font-family:'Montserrat', system-ui, sans-serif;
-      background:
-        radial-gradient(900px 500px at 20% 10%, rgba(0,120,255,.25), transparent 60%),
-        radial-gradient(900px 600px at 80% 80%, rgba(0,255,150,.18), transparent 65%),
-        #050505;
-      color:#fff;
-      overflow-x:hidden;
-    }
+body{
+  background:#000;
+  color:#fff;
+  overflow-x:hidden;
+}
 
-    /* ================= TOP BAR ================= */
-    header{
-      position:fixed;
-      top:0;
-      left:0;
-      width:100%;
-      padding:18px 40px;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      background:rgba(5,5,5,.55);
-      backdrop-filter: blur(14px);
-      z-index:1000;
-    }
+/* ===== NAV ===== */
+nav{
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  padding:20px 60px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  background:rgba(0,0,0,0.55);
+  backdrop-filter:blur(12px);
+  z-index:1000;
+}
 
-    .brand{
-      letter-spacing:6px;
-      font-weight:600;
-      opacity:.9;
-    }
+nav .brand{
+  display:flex;
+  align-items:center;
+  gap:15px;
+}
 
-    nav a{
-      margin-left:28px;
-      text-decoration:none;
-      color:#fff;
-      font-size:14px;
-      opacity:.85;
-      transition:.3s;
-    }
+nav img{
+  height:40px;
+}
 
-    nav a:hover{
-      opacity:1;
-    }
+nav span{
+  letter-spacing:4px;
+  font-size:12px;
+  opacity:.8;
+}
 
-    /* ================= HERO ================= */
-    .hero{
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      padding:140px 40px 80px;
-      position:relative;
-    }
+nav ul{
+  list-style:none;
+  display:flex;
+  gap:30px;
+}
 
-    .hero::before{
-      content:"";
-      position:absolute;
-      inset:0;
-      background:url("img/logo.jpg") center/700px no-repeat;
-      opacity:.06;
-      filter:blur(1px);
-    }
+nav ul li a{
+  text-decoration:none;
+  color:#fff;
+  font-size:14px;
+  letter-spacing:2px;
+  position:relative;
+}
 
-    .hero-content{
-      max-width:700px;
-      position:relative;
-      z-index:2;
-    }
+nav ul li a::after{
+  content:'';
+  position:absolute;
+  width:0;
+  height:2px;
+  background:#fff;
+  bottom:-6px;
+  left:0;
+  transition:.3s;
+}
 
-    .hero h1{
-      font-size:clamp(48px,8vw,96px);
-      font-weight:800;
-      line-height:1;
-      letter-spacing:-2px;
-      margin-bottom:20px;
-    }
+nav ul li a:hover::after{
+  width:100%;
+}
 
-    .hero p{
-      font-size:18px;
-      opacity:.85;
-      max-width:420px;
-    }
+/* ===== HERO ===== */
+.hero{
+  height:100vh;
+  display:flex;
+  align-items:center;
+  padding:0 80px;
+  position:relative;
+}
 
-    /* ================= FLOAT DISCOUNT ================= */
-    .gift{
-      position:fixed;
-      right:25px;
-      bottom:25px;
-      background:linear-gradient(135deg,#00ff9d,#00b3ff);
-      color:#000;
-      padding:16px 22px;
-      border-radius:18px;
-      font-weight:700;
-      box-shadow:0 0 40px rgba(0,255,200,.45);
-      animation:float 3s ease-in-out infinite;
-      z-index:1001;
-    }
+.hero::before{
+  content:'';
+  position:absolute;
+  inset:0;
+  background:
+    radial-gradient(circle at bottom,#0f3d2e,#000 70%);
+  z-index:-2;
+}
 
-    @keyframes float{
-      0%,100%{transform:translateY(0);}
-      50%{transform:translateY(-10px);}
-    }
+.hero::after{
+  content:'';
+  position:absolute;
+  inset:0;
+  background:url("logo.jpg") center/70% no-repeat;
+  opacity:0.08;
+  z-index:-1;
+}
 
-    /* ================= EXCLUSIVES ================= */
-    .exclusives{
-      padding:120px 40px;
-      max-width:1200px;
-      margin:auto;
-    }
+.hero-content{
+  max-width:700px;
+}
 
-    .exclusives h2{
-      font-size:36px;
-      font-weight:700;
-      margin-bottom:14px;
-    }
+.hero h1{
+  font-size:90px;
+  font-weight:900;
+  line-height:1;
+}
 
-    .exclusives span{
-      opacity:.7;
-      font-size:15px;
-    }
+.hero p{
+  margin-top:20px;
+  font-size:20px;
+  opacity:.85;
+  max-width:480px;
+}
 
-    .exclusive-grid{
-      margin-top:60px;
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-      gap:30px;
-    }
+.hero .cta{
+  margin-top:40px;
+  display:inline-block;
+  padding:16px 40px;
+  border:1px solid #fff;
+  text-decoration:none;
+  color:#fff;
+  letter-spacing:3px;
+  transition:.4s;
+}
 
-    .exclusive-card{
-      position:relative;
-      overflow:hidden;
-      border-radius:22px;
-      height:360px;
-      background:#000;
-      box-shadow:0 25px 60px rgba(0,0,0,.6);
-      transition:.5s;
-    }
+.hero .cta:hover{
+  background:#fff;
+  color:#000;
+}
 
-    .exclusive-card img{
-      width:100%;
-      height:100%;
-      object-fit:cover;
-      filter:grayscale(100%) contrast(1.05);
-      transition:.6s;
-    }
+/* ===== EXCLUSIVE ===== */
+.exclusive{
+  padding:120px 80px;
+}
 
-    .exclusive-card:hover img{
-      transform:scale(1.12);
-      filter:none;
-    }
+.exclusive h2{
+  font-size:42px;
+  margin-bottom:40px;
+  letter-spacing:4px;
+}
 
-    .exclusive-label{
-      position:absolute;
-      bottom:20px;
-      left:20px;
-      font-weight:700;
-      letter-spacing:2px;
-      font-size:14px;
-      opacity:.9;
-    }
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:30px;
+}
 
-    /* ================= FOOTER ================= */
-    footer{
-      text-align:center;
-      padding:40px 20px;
-      opacity:.55;
-      font-size:13px;
-    }
+.card{
+  position:relative;
+  overflow:hidden;
+  border-radius:12px;
+}
 
-    /* ================= MOBILE ================= */
-    @media(max-width:768px){
-      header{
-        padding:14px 20px;
-      }
-      nav a{
-        margin-left:16px;
-        font-size:13px;
-      }
-    }
-  </style>
+.card img{
+  width:100%;
+  height:420px;
+  object-fit:cover;
+  transition:.6s;
+}
+
+.card:hover img{
+  transform:scale(1.08);
+}
+
+.card span{
+  position:absolute;
+  bottom:20px;
+  left:20px;
+  font-size:18px;
+  font-weight:700;
+  letter-spacing:2px;
+}
+
+/* ===== FLOATING PROMO ===== */
+.promo{
+  position:fixed;
+  bottom:30px;
+  right:30px;
+  background:#fff;
+  color:#000;
+  padding:18px 26px;
+  border-radius:40px;
+  font-weight:700;
+  letter-spacing:2px;
+  animation:float 3s ease-in-out infinite;
+}
+
+@keyframes float{
+  0%,100%{transform:translateY(0)}
+  50%{transform:translateY(-10px)}
+}
+
+/* ===== RESPONSIVE ===== */
+@media(max-width:768px){
+  nav{
+    padding:15px 30px;
+  }
+  .hero{
+    padding:0 30px;
+  }
+  .hero h1{
+    font-size:60px;
+  }
+}
+</style>
 </head>
 
 <body>
 
-  <!-- HEADER -->
-  <header>
-    <div class="brand">BOUTIQUE</div>
-    <nav>
-      <a href="index.html">Inicio</a>
-      <a href="tienda.html">Prendas</a>
-      <a href="tienda.html">Tienda</a>
-      <a href="carrito.html">Carrito</a>
-    </nav>
-  </header>
-
-  <!-- HERO -->
-  <section class="hero">
-    <div class="hero-content">
-      <h1>MIRANDA<br>FLOW</h1>
-      <p>Ropa con presencia. Estilo que se nota sin hablar.</p>
-    </div>
-  </section>
-
-  <!-- EXCLUSIVES -->
-  <section class="exclusives">
-    <h2>EXCLUSIVAS</h2>
-    <span>Selección premium — impacto visual garantizado</span>
-
-    <div class="exclusive-grid">
-      <div class="exclusive-card">
-        <img src="img/exclusive-1.jpg" alt="Exclusiva 1">
-        <div class="exclusive-label">EXCLUSIVA 01</div>
-      </div>
-
-      <div class="exclusive-card">
-        <img src="img/exclusive-2.jpg" alt="Exclusiva 2">
-        <div class="exclusive-label">EXCLUSIVA 02</div>
-      </div>
-
-      <div class="exclusive-card">
-        <img src="img/exclusive-3.jpg" alt="Exclusiva 3">
-        <div class="exclusive-label">EXCLUSIVA 03</div>
-      </div>
-
-      <div class="exclusive-card">
-        <img src="img/exclusive-4.jpg" alt="Exclusiva 4">
-        <div class="exclusive-label">EXCLUSIVA 04</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- GIFT -->
-  <div class="gift">
-    🎁 -15% SOLO HOY
+<nav>
+  <div class="brand">
+    <img src="logo.jpg" alt="Miranda Flow">
+    <span>BOUTIQUE</span>
   </div>
 
-  <!-- FOOTER -->
-  <footer>
-    © 2025 Miranda Flow — Todos los derechos reservados
-  </footer>
+  <ul>
+    <li><a href="index.html">Inicio</a></li>
+    <li><a href="producto.html">Prendas</a></li>
+    <li><a href="producto.html">Tienda</a></li>
+    <li><a href="carrito.html">Carrito</a></li>
+  </ul>
+</nav>
+
+<section class="hero">
+  <div class="hero-content">
+    <h1>MIRANDA<br>FLOW</h1>
+    <p>Ropa con presencia. Estilo que se nota sin hablar.</p>
+    <a href="producto.html" class="cta">VER PRENDAS</a>
+  </div>
+</section>
+
+<section class="exclusive">
+  <h2>EXCLUSIVE</h2>
+
+  <div class="grid">
+    <div class="card">
+      <img src="exclusive-1.jpg">
+      <span>EXCLUSIVE I</span>
+    </div>
+
+    <div class="card">
+      <img src="exclusive-2.jpg">
+      <span>EXCLUSIVE II</span>
+    </div>
+
+    <div class="card">
+      <img src="exclusive-3.jpg">
+      <span>EXCLUSIVE III</span>
+    </div>
+
+    <div class="card">
+      <img src="exclusive-4.jpg">
+      <span>EXCLUSIVE IV</span>
+    </div>
+  </div>
+</section>
+
+<div class="promo">
+  🎁 -20% HOY
+</div>
 
 </body>
 </html>
