--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600;800;900&display=swap" rel="stylesheet">
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Montserrat',sans-serif;}
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Montserrat',sans-serif}
 body{background:#000;color:#fff;overflow-x:hidden}
 
 /* HEADER */
@@ -16,161 +16,142 @@ header{
 position:fixed;top:0;width:100%;height:70px;
 display:flex;align-items:center;justify-content:space-between;
 padding:0 40px;
-background:rgba(0,0,0,.55);
-backdrop-filter:blur(14px);
+background:rgba(0,0,0,.6);
+backdrop-filter:blur(16px);
 z-index:100;
 }
-.logo{
-display:flex;align-items:center;gap:12px;
-letter-spacing:4px;font-weight:800;
-}
-.logo img{
-height:44px;
-filter:drop-shadow(0 0 18px rgba(255,255,255,.45));
-}
+.logo{display:flex;align-items:center;gap:14px;font-weight:800;letter-spacing:4px}
+.logo img{height:44px;filter:drop-shadow(0 0 20px rgba(255,255,255,.6))}
 nav a{
-margin-left:34px;
-color:#fff;text-decoration:none;
-letter-spacing:3px;font-size:13px;
-opacity:.75;
+margin-left:34px;color:#fff;text-decoration:none;
+letter-spacing:3px;font-size:13px;opacity:.7
 }
 nav a:hover{opacity:1}
 
 /* HERO */
 .hero{
-min-height:100vh;
-padding-top:120px;
-display:flex;align-items:center;
-position:relative;
+min-height:100vh;padding-top:120px;
+display:flex;align-items:center;position:relative
 }
 .hero::before{
-content:"";
-position:absolute;inset:-20%;
+content:"";position:absolute;inset:-20%;
 background:
-radial-gradient(circle at center, rgba(0,0,0,.35), #000 70%),
+radial-gradient(circle,rgba(0,0,0,.35),#000 70%),
 url("logo.jpg") center/70% no-repeat;
-opacity:.22;
-filter:blur(1px);
-animation:floatLogo 18s ease-in-out infinite;
+opacity:.22;animation:float 20s ease-in-out infinite
 }
-@keyframes floatLogo{
+@keyframes float{
 0%{transform:translateY(0) scale(1)}
-50%{transform:translateY(-30px) scale(1.06)}
+50%{transform:translateY(-30px) scale(1.07)}
 100%{transform:translateY(0) scale(1)}
 }
-.hero-content{
-position:relative;
-padding-left:8vw;
-max-width:900px;
-}
+.hero-content{position:relative;padding-left:8vw;max-width:900px}
 .hero h1{
 font-size:clamp(60px,9vw,110px);
-font-weight:900;
-letter-spacing:6px;
+font-weight:900;letter-spacing:6px
 }
 .hero p{
-margin-top:24px;
-font-size:18px;
-max-width:520px;
-opacity:.85;
-line-height:1.6;
+margin-top:24px;font-size:18px;max-width:520px;
+opacity:.85;line-height:1.6
 }
 .hero button{
-margin-top:48px;
-padding:18px 52px;
-background:none;
-border:1px solid #fff;
-color:#fff;
-letter-spacing:4px;
-cursor:pointer;
-transition:.4s;
+margin-top:48px;padding:18px 52px;
+background:none;border:1px solid #fff;color:#fff;
+letter-spacing:4px;cursor:pointer;transition:.4s
 }
-.hero button:hover{
-background:#fff;color:#000;
-}
+.hero button:hover{background:#fff;color:#000}
 
 /* DESCUENTO */
 .discount{
-position:fixed;
-bottom:28px;right:28px;
+position:fixed;bottom:28px;right:28px;
 background:#fff;color:#000;
-padding:16px 28px;
-border-radius:40px;
-font-weight:800;
-letter-spacing:1px;
+padding:16px 28px;border-radius:40px;
+font-weight:800;letter-spacing:1px;
 display:flex;gap:10px;
-box-shadow:0 20px 50px rgba(0,0,0,.7);
-animation:pulse 2.2s infinite;
-z-index:99;
+box-shadow:0 25px 60px rgba(0,0,0,.8);
+animation:pulse 2.4s infinite;z-index:99
 }
 @keyframes pulse{
 0%{transform:scale(1)}
-50%{transform:scale(1.1)}
+50%{transform:scale(1.12)}
 100%{transform:scale(1)}
 }
 
-/* EXCLUSIVES */
+/* EXCLUSIVAS */
 .exclusive{
-padding:160px 8vw;
+padding:180px 8vw;
 }
-.exclusive h2{
-font-size:40px;
-letter-spacing:6px;
-margin-bottom:90px;
+.exclusive-title{
+text-align:center;
+margin-bottom:120px;
+opacity:0;
+transform:translateY(-60px);
+animation:titleIn 1.4s ease forwards;
 }
+@keyframes titleIn{
+to{opacity:1;transform:translateY(0)}
+}
+.exclusive-title h2{
+font-size:48px;
+letter-spacing:12px;
+font-weight:800;
+text-shadow:0 0 30px rgba(255,255,255,.25);
+}
+
+/* GRID */
 .grid{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-gap:60px;
+gap:70px;
 }
 .card{
 position:relative;
 height:420px;
-border-radius:26px;
+border-radius:30px;
 overflow:hidden;
 background:#111;
 opacity:0;
-transform:translateY(80px) scale(.95);
-animation:reveal 1.3s ease forwards;
+transform:translateY(120px) scale(.92);
+animation:cardUp 1.4s ease forwards;
 }
-.card:nth-child(2){animation-delay:.25s}
-.card:nth-child(3){animation-delay:.5s}
-.card:nth-child(4){animation-delay:.75s}
+.card:nth-child(1){animation-delay:.2s}
+.card:nth-child(2){animation-delay:.4s}
+.card:nth-child(3){animation-delay:.6s}
+.card:nth-child(4){animation-delay:.8s}
 
-@keyframes reveal{
+@keyframes cardUp{
 to{opacity:1;transform:translateY(0) scale(1)}
 }
+
 .card img{
 width:100%;height:100%;
 object-fit:cover;
-transition:1s cubic-bezier(.19,1,.22,1);
+transition:1.1s cubic-bezier(.19,1,.22,1);
+filter:blur(4px) brightness(.6);
+}
+.card:hover img{
+transform:scale(1.18);
+filter:blur(0) brightness(.8);
 }
 .card::after{
 content:"";
 position:absolute;inset:0;
-background:linear-gradient(to top, rgba(0,0,0,.85), transparent 60%);
-opacity:.7;
+background:linear-gradient(to top,rgba(0,0,0,.9),transparent 65%);
 }
 .card span{
 position:absolute;
-bottom:26px;left:26px;
+bottom:28px;left:28px;
 font-weight:800;
-letter-spacing:4px;
-font-size:15px;
+letter-spacing:5px;
+font-size:14px;
 z-index:2;
-}
-.card:hover img{
-transform:scale(1.15);
-filter:brightness(.65);
+opacity:.9
 }
 
 /* FOOTER */
 footer{
-padding:50px;
-text-align:center;
-opacity:.4;
-font-size:12px;
-letter-spacing:2px;
+padding:50px;text-align:center;
+opacity:.4;font-size:12px;letter-spacing:2px
 }
 </style>
 </head>
@@ -198,7 +179,10 @@ BOUTIQUE
 </section>
 
 <section class="exclusive">
+<div class="exclusive-title">
 <h2>EXCLUSIVAS</h2>
+</div>
+
 <div class="grid">
 <div class="card"><img src="exclusive-1.jpg"><span>DROP I</span></div>
 <div class="card"><img src="exclusive-2.jpg"><span>DROP II</span></div>
